--- a/src/main/webapp/info.html
+++ b/src/main/webapp/info.html
@@ -149,7 +149,7 @@
                     <img id="myface" src="/resources/image/charactercat.png">
                     <div id="profilebox">
 
-                        <div class="entity" id="title">우상욱<b>Sang-uk Woo</b></div>
+                        <div class="entity" id="title">우상욱<b>Java engineer</b></div>
                         <!-- 
                             <div class="bottomline"></div> -->
                         <div class="entity">
@@ -176,25 +176,20 @@
 
 
                     <div id="introduceself">
-                        <p style="margin-bottom: 10px; color:rgb(78, 78, 78);"><b
-                                style="font-size: 23px;line-height: 23px;">목표</b>
+                        <div class="content">
+                        <p class="title">간략한 소개
                         </p>
-                        <p style="margin-bottom: 8px;"><b>웹 개발자로써 어떤 업무를 맡더라도 팀에 도움이 되는 존재가 되고싶습니다.</b></p>
-                        <p style="margin-bottom: 8px;">기존의 요소들을 완벽하게 다루면서 트렌드의 변화 속도에 늦춰지지 않는 풀스택 개발자가 되는 것이 저의 목표입니다.
-                        </p>
+                        
+                        <p>아직 현업에 뛰어들지 못한 취업 준비 생이지만, 준비하는 기간동안 꾸준히 실무 위주의 개인 프로젝트를 진행하면서 경험을 쌓아 왔으며, 현재에는 고용주가 원하는 실적과 이익 실현을 위하여 열정적인 노력을 기울일 준비가 되어있는 뼛속까지 코드밖에 없는 개발자입니다. </p>
+                    </div>
 
 
+                    <div class="content">
+                        <p class="title">보유 기술</p>
+                                
+                        <p >JAVA ANDROID SQL HTML5 CSS JAVASCRIPT</p>
 
-                        <p style="margin-top:20px; margin-bottom: 10px; color:rgb(78, 78, 78);"><b style="font-size: 23px;
-                                line-height: 23px;">기술</b></p>
-                        <p style="margin-bottom: 8px;"><b>저는 Spring Legacy프로젝트로 원하는 형태의 서버를 구축 할 수 있습니다.</b> </p>
-                        <p style="margin-bottom: 16px;">Spring Framework가 어떻게 동작하는 지 잘 이해하고 있으므로 새로운 프로젝트를 설계 할 수 있으며,
-                            이미 완성 된 어플리케이션 또한 빠르게 이해하여 현업에 적응 할 수 있습니다.</p>
-                        <p style="margin-bottom: 8px;"><b>저는 html5, css, javascript를 사용해 기본적인 반응형 프론트엔드를 구현 할 수
-                                있습니다.</b> </p>
-                        <p style="margin-bottom: 18px;">디자이너나 고객의 디자인 가이드를 잘 이해할 수 있으며 코드로 쉽게 구현 할 수 있습니다.</p>
-
-
+                    </div>
                     </div>
 
 
@@ -219,8 +214,6 @@
                     <div class="profilebar"></div>
                     <p class="titlebars">학력</p>
                     <div class="profilecontent" id="profilewithgradu">
-                        <p>2009.02. 김해 임호중학교 졸업</p>
-                        <p>2012.02. 김해 삼방고등학교 졸업</p>
                         <p>2019.02. 창원대학교 컴퓨터공학과 졸업</p>
 
                     </div>
@@ -230,7 +223,6 @@
                     <div class="profilebar"></div>
                     <p class="titlebars">경력</p>
                     <div class="profilecontent">
-                        <p>2015.11. - 2016.07. 제6087부대 유선반장 근무(전문하사)</p>
                     </div>
                 </div>
 
@@ -251,12 +243,8 @@
                     <div class="profilecontent" style="height: 70px;">
                         <p>Google cloud Compute Engine</p>
                         <p>Apache - tomcat</p>
-                        <p>Ubuntu</p>
                         <p>SSL</p>
                         <p>Android</p>
-                        <p>Design Pattern</p>
-                        <p>Software design</p>
-
                     </div>
                 </div>
 
@@ -416,7 +404,7 @@
 
         var skilllabels = ['JAVA', 'SPRING', 'MYSQL', 'CENTOS', 'GIT', 'HTML & JS & CSS']
         var skillicons = ['java.png', 'spring.png', 'mysql.png', 'centos.png', 'git.png', 'html-css-java.png'];
-        var skilllevel = [6, 5, 5, 4, 4, 4]
+        var skilllevel = [2, 1, 1, 1, 1, 1]
         var $starlabel;
         var statinit = 0;
         var expandes = 0;
