--- a/src/main/webapp/info.html
+++ b/src/main/webapp/info.html
@@ -7,15 +7,15 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width">
 
-    <link rel="stylesheet" type="text/css" href="resources/css/fullpage.css" />
+    <link rel="stylesheet" type="text/css" href="/resources/css/fullpage.css" />
     <link href="https://fonts.googleapis.com/css?family=Do+Hyeon|Gaegu|Poor+Story&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="resources/css/info.css" />
+    <link rel="stylesheet" type="text/css" href="/resources/css/info.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
         integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <title>
         우상욱 소개
     </title>
-    <link rel="stylesheet" href="resources/css/animate.css">
+    <link rel="stylesheet" href="/resources/css/animate.css">
 </head>
 
 <body>
@@ -48,7 +48,7 @@
 
             <div id="instaframe">
                 <div id="boxtop">
-                    <img src="resources/image/charactercat.png">
+                    <img src="/resources/image/charactercat.png">
                     <span>uk_oppa</span>
                     <div id="dotcontainer">
                         <div class="dot"></div>
@@ -56,16 +56,16 @@
                         <div class="dot"></div>
                     </div>
                 </div>
-                <img id="photo" src="resources/image/charactercat2.png">
+                <img id="photo" src="/resources/image/charactercat2.png">
 
                 <div id="boxbottom">
-                    <img src="resources/image/bar.png">
+                    <img src="/resources/image/bar.png">
                     <p> <b style="font-size: 13px;">uk_oppa</b> 술 한잔 마셨습니다... 취직이 잘 안되도 좋습니다. 하지만 우상욱 하나만 기억해주세요 진심을 다해
                         전합니다. 포트폴리오가 별로 일수있습니다 밤낮으로 고민하고 준비 했습니다... 최선을 다했고 열심히 했습니다 저의 진심이 느껴지길 바랍니다 고맙습니다...</p>
                 </div>
             </div>
 
-            <img id="frameimg" src="resources/image/soju.png">
+            <img id="frameimg" src="/resources/image/soju.png">
             <div id="story" class="animated tada">포트폴리오 확인하기</div>
             <svg class="arrows">
                 <path class="a1" d="M10 0 L30 22 L50 0"></path>
@@ -101,14 +101,14 @@
                     제 페이지에 오신 것을 환영합니다!
                 </p>
                 <div id="iconbox">
-                    <img class="iconset" src="resources/image/centos.png">
-                    <img class="iconset" src="resources/image/computeengine.png">
-                    <img class="iconset" src="resources/image/git.png">
-                    <img class="iconset" src="resources/image/html-css-java.png">
-                    <img class="iconset" src="resources/image/java.png">
-                    <img class="iconset" src="resources/image/spring.png">
-                    <img class="iconset" src="resources/image/mybatis.png">
-                    <img class="iconset" src="resources/image/mysql.png">
+                    <img class="iconset" src="/resources/image/centos.png">
+                    <img class="iconset" src="/resources/image/computeengine.png">
+                    <img class="iconset" src="/resources/image/git.png">
+                    <img class="iconset" src="/resources/image/html-css-java.png">
+                    <img class="iconset" src="/resources/image/java.png">
+                    <img class="iconset" src="/resources/image/spring.png">
+                    <img class="iconset" src="/resources/image/mybatis.png">
+                    <img class="iconset" src="/resources/image/mysql.png">
 
                 </div>
             </div>
@@ -124,7 +124,7 @@
 
                 <div class="about" id="expandable">
 
-                    <img id="myface" src="resources/image/charactercat.png">
+                    <img id="myface" src="/resources/image/charactercat.png">
                     <div id="profilebox">
 
                         <div class="entity" id="title">우상욱<b>Java engineer</b></div>
@@ -239,7 +239,7 @@
 
             <div class="contentbox" id="fourthbox">
                 <p>개인 블로그 프로젝트 "우산국"</p>
-                <img id="monitor" src="resources/image/mani.png">
+                <img id="monitor" src="/resources/image/mani.png">
 
 
 
@@ -363,10 +363,10 @@
 
 
 
-    <script src="resources/js/jquery-3.3.1.min.js"></script>
-    <script src="resources/vendors/easings.min.js"></script>
-    <script type="text/javascript" src="resources/vendors/scrolloverflow.min.js"></script>
-    <script type="text/javascript" src="resources/js/fullpage.js"></script>
+    <script src="/resources/js/jquery-3.3.1.min.js"></script>
+    <script src="/resources/vendors/easings.min.js"></script>
+    <script type="text/javascript" src="/resources/vendors/scrolloverflow.min.js"></script>
+    <script type="text/javascript" src="/resources/js/fullpage.js"></script>
     <script>
 
 
@@ -447,7 +447,7 @@
                                 var $skillcarrot = $('<svg class="skillcarot" width="30px" height="65px" viewBox="0 0 30 65"xmlns="http://www.w3.org/2000/svg"><path d="M 12 26 L 18 32 L 12 38 z" fill="Gray" ; stroke-width="1" /></svg>');
 
                                 var $skills = $('<div class="skills"></div>');
-                                var $skillicon = $('<img class="skillsicon" src="resources/image/' + skillicons[i] + '">');
+                                var $skillicon = $('<img class="skillsicon" src="/resources/image/' + skillicons[i] + '">');
                                 var $skilllabel = $('<p class="skillslabel">' + skilllabels[i] + '</p>');
                                 var $skillstars = $('<div class="skillsstars"><p class="starlabel">' + skilllevel[i] + '/10</p></div>')
 
