--- a/src/main/webapp/info.html
+++ b/src/main/webapp/info.html
@@ -158,7 +158,7 @@
                         <p class="title">간략한 소개
                         </p>
                         
-                        <p>신기술에 가슴이 뛰고, 잘 짜인 선배님들의 코드에 소름이 돋는, 취업 준비 중인 개발자입니다. 현직 웹 개발자가 되기 위하여, 준비하는 기간 동안 SPRING 프레임워크와 프런트엔드 기본 언어인 HTML5, JAVASCRIPT, CSS를 활용하여 개인 블로그 사이트를 제작하였고, 현재 이 애플리케이션은 저의 블로그로 활용되고 있습니다:D</p>
+                        <p>새로운 기술을 사랑하고, 오래된 기술을 아끼는 취준생이자 개발자입니다. 현직 웹 개발자가 되기 위하여, 준비하는 기간 동안 SPRING 프레임워크와 프런트엔드 기본 언어인 HTML5, JAVASCRIPT, CSS를 활용하여 개인 블로그 사이트를 제작하였고, 현재 이 애플리케이션은 저의 블로그로 활용되고 있습니다:D</p>
                     </div>
 
 
@@ -208,6 +208,7 @@
                     <div class="profilebar"></div>
                     <p class="titlebars">경력</p>
                     <div class="profilecontent">
+                        <p>2015.11 - 2016.07 육군 전문하사 근무(유선반장)</p>
                     </div>
                 </div>
 
@@ -217,6 +218,7 @@
                     <div class="profilebar"></div>
                     <p class="titlebars">자격증</p>
                     <div class="profilecontent" style="height: 70px;">
+                        <p>2015.06 정보처리기능사</p>
                         <p>2018.08 정보처리기사</p>
                         <p>2019.01 SQL-D</p>
                     </div>
@@ -332,7 +334,7 @@
 
             <div id="textbox">
 
-                <p>여기까지 페이지를 넘겨주셔서 감사합니다</p>
+                <p>여기까지 페이지를 넘겨주셔서 감사합니다:D</p>
                 <p></p>
                 <p>우 상 욱</p>
                 <p>(+82)10-3901-6316</p>
